--- a/index.html
+++ b/index.html
@@ -7,24 +7,118 @@
     <title>Untitled Document</title>
     <!-- Bootstrap -->
 	<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
-	
+	<style type="text/css">
+	.col-mr-4 {
+}
+    .col-ml-4 {
+}
+    .col-xr-8 {
+}
+    .col-xd-8 {
+}
+    .col-xm-9 {
+}
+    .md-3 {
+}
+    .conta {
+}
+    </style>
+	<link href="jiarunHomePage.css" rel="stylesheet" type="text/css">
   </head>
   <body style="padding-top: 70px">
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#">Jiarun Wei</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active"> <a class="nav-link" href="#">Home&nbsp; <span class="sr-only">(current)</span></a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#">Education</a> </li>
-        <li class="nav-item dropdown"> <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Projects&nbsp; </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a> </div>
-        </li>
-        <li class="nav-item"> <a class="nav-link disabled" href="#">Skills</a> </li>
-      </ul>
-</div>
+      <div class="container">
+        <ul class="navbar-nav">
+          <li class="nav-item active"> <a class="nav-link" href="#">Introduction&nbsp;&nbsp; <span class="sr-only">(current)</span></a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#edu">Education</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#prj"> Projects</a>
+            
+          </li>
+          <li class="nav-item"> <a class="nav-link" href="#ski">Skills</a> </li>
+        </ul>
+      </div>
+    </div>
   </nav>
+  <div class="container"> 
+    <div class="row align-items-center">
+<div class="col-4"><img src="IDPhoto.png" alt="" width="180" height="272" class="mx-5"></div>
+<div class="col-8">
+  <h1>Jiarun Wei (魏嘉润)</h1>
+  <div class="md-3">
+    <p><strong>Phone: </strong>+1 (412)- 214-2316&nbsp;</p>
+    <p><strong>Email:</strong><strong>&nbsp;</strong>1303781268@qq.com</p>
+    <p><strong>LinkedIn:&nbsp;</strong>&nbsp;<a href="https://www.linkedin.com/in/jiarun-wei-gemini/">https://www.linkedin.com/in/jiarun-wei-gemini/</a></p>
+    <p>Jiarun Wei is currently the Master student in Safe AI Lab at Carnegie Mellon University. His research interest lies in the intersection of perception, deep learning and mechanical design in robotics.</p>
+  </div>
+</div>
+</div>
+    <div class="p-5">
+      <h1 id="edu">Education</h1>
+      <div class="row p-5">
+        <div class="col-xl-4">
+          <p><strong>&nbsp;Masters</strong> (2020.09-2022.05)</p>
+          <p><strong>&nbsp;Undergrad</strong> (2016.09-2020.06)&nbsp;</p>
+          <p>&nbsp;<strong>Exchange</strong> (2019.01-2019.12)</p>
+        </div>
+        <div class="col-xl-4">
+          <p>Carnegie Mellon University</p>
+          <p>Dalian University of Technology&nbsp;</p>
+          <p>University of California, Berkeley&nbsp;</p>
+        </div>
+        <div class="col-xl-4">
+          <p>MS in Mechanical Engineering, Research </p>
+          <p>Mechanical Engineering&nbsp;</p>
+          <p>Berkeley Global Access (Concurrent Enrollment)&nbsp;</p>
+        </div>
+      </div>
+</div>
+<div class="mx-md-5" id="prj">
+  <h1>Projects</h1>
+    <div class="row p-5 align-items-center">
+        <div class="col-xl-4">
+          <p><strong>SafeAI Lab</strong></p>
+        </div>
+        <div class="col-xl-8">
+          <p>Autonomous Delivery Robot (Sep, 2021-Present)</p>
+          <p>Multi Scenario Autonomous Driving RL Platform Based on CARLA (Nov, 2021-Present)</p>
+        </div>
+      </div>
+<div class="row p-5 align-items-center">
+      <div class="col-xl-4">
+          <p><strong>Intelligent Control Lab</strong></p>
+        </div>
+        <div class="col-xl-8">
+          <p>Autonomous Safety Capsule Solving for Robot Arms using SVD (Nov, 2020-Dec, 2020)</p>
+</div>
+      </div>
+<div class="row p-5 align-items-center">
+  <div class="col-xl-4">
+    <p><strong>Course Projects</strong></p>
+  </div>
+  <div class="col-xl-8">
+    <p>Emoji Matching for Tweets (Sep, 2020-Dec, 2020)</p>
+    <p>Energy Optimization for Autonomous Parking based on MPC (March, 2020-June, 2020)</p>
+  </div>
+</div>
+    </div>
+<div class="mx-md-5" id="prj2">
+  <h1 id="ski">Skills</h1>
+  <div class="row p-5 align-items-center">
+    <div class="col-xl-4">
+      <p><strong>Programming Language&nbsp;</strong></p>
+      <p><strong>Toolkits&nbsp;</strong></p>
+      <p><strong>Operating Systems </strong></p>
+    </div>
+    <div class="col-xl-8">
+      <p>C++, MATLAB, Python, Java, C for Embedded Systems&nbsp;</p>
+      <p>PyTorch&nbsp;</p>
+      <p>ROS </p>
+    </div>
+  </div>
+</div>
+  </div>
 <!-- body code goes here -->
 
 
