adjust photo overlay

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Untitled Document</title>
+    <title>Welcome to Jiarun's Personal Website</title>
     <!-- Bootstrap -->
 	<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
 	<style type="text/css">
@@ -21,6 +21,8 @@
     .md-3 {
 }
     .conta {
+}
+    .respon {
 }
     </style>
 	<link href="jiarunHomePage.css" rel="stylesheet" type="text/css">
@@ -43,8 +45,8 @@
   </nav>
   <div class="container"> 
     <div class="row align-items-center">
-<div class="col-4"><img src="IDPhoto.png" alt="" width="180" height="272" class="mx-5"></div>
-<div class="col-8">
+<div class="col"><img src="IDPhoto.png" alt="Responsive image" class="img-fluid d-block mx-auto"></div>
+<div class="col-9">
   <h1>Jiarun Wei (魏嘉润)</h1>
   <div class="md-3">
     <p><strong>Phone: </strong>+1 (412)- 214-2316&nbsp;</p>
@@ -54,7 +56,7 @@
   </div>
 </div>
 </div>
-    <div class="p-5">
+    <div class="p-3">
       <h1 id="edu">Education</h1>
       <div class="row p-5">
         <div class="col-xl-4">
@@ -74,7 +76,7 @@
         </div>
       </div>
 </div>
-<div class="mx-md-5" id="prj">
+<div class="mx-md-3" id="prj">
   <h1>Projects</h1>
     <div class="row p-5 align-items-center">
         <div class="col-xl-4">
@@ -103,7 +105,7 @@
   </div>
 </div>
     </div>
-<div class="mx-md-5" id="prj2">
+<div class="mx-md-3" id="prj2">
   <h1 id="ski">Skills</h1>
   <div class="row p-5 align-items-center">
     <div class="col-xl-4">
