add Github link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
   <div class="md-3">
     <p><strong>Phone: </strong>+1 (412)- 214-2316&nbsp;</p>
     <p><strong>Email:</strong><strong>&nbsp;</strong>1303781268@qq.com</p>
-    <p><strong>LinkedIn:&nbsp;</strong>&nbsp;<a href="https://www.linkedin.com/in/jiarun-wei-gemini/">https://www.linkedin.com/in/jiarun-wei-gemini/</a></p>
+    <p><strong>Github:&nbsp;&nbsp;</strong><a href="#">https://github.com/jiarunw</a>&nbsp;</p>
+<p><strong>LinkedIn:&nbsp;</strong>&nbsp;<a href="https://www.linkedin.com/in/jiarun-wei-gemini/">https://www.linkedin.com/in/jiarun-wei-gemini/</a></p>
     <p>Jiarun Wei is currently the Master student in Safe AI Lab at Carnegie Mellon University. His research interest lies in the intersection of perception, deep learning and mechanical design in robotics.</p>
   </div>
 </div>
