--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jiarun Wei | Homepage</title>
     <!-- Bootstrap -->
-	<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<style type="text/css">
 	.col-mr-4 {
 }
@@ -26,19 +26,28 @@
 }
     </style>
 	<link href="jiarunHomePage.css" rel="stylesheet" type="text/css">
+	  <link rel="stylesheet/less" type="text/css" href="styles.less" />
+	  <script src="https://cdn.jsdelivr.net/npm/less@4.1.1" ></script>
   </head>
   <body style="padding-top: 70px">
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar fixed-top navbar-expand-lg bg-light navbar-light">
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent1">
       <div class="container">
         <ul class="navbar-nav">
-          <li class="nav-item active"> <a class="nav-link" href="#">Introduction&nbsp;&nbsp; <span class="sr-only">(current)</span></a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#edu">Education</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#prj"> Projects</a>
+          <li class="nav-item active"> 
+            <a1 class="nav-link" href="#">Introduction</a1>
+          </li>
+          <li class="nav-item"> 
+            <a1 class="nav-link" href="#edu">Education</a1> 
+          </li>
+          <li class="nav-item"> 
+            <a1 class="nav-link" href="#prj"> Projects</a1>
             
           </li>
-          <li class="nav-item"> <a class="nav-link" href="#ski">Skills</a> </li>
+          <li class="nav-item"> 
+            <a1 class="nav-link" href="#ski">Skills</a1> 
+          </li>
         </ul>
       </div>
     </div>
@@ -73,7 +82,7 @@
         <div class="col-xl-4">
           <p>MS in Mechanical Engineering, Research </p>
           <p>Mechanical Engineering&nbsp;</p>
-          <p>Berkeley Global Access (Concurrent Enrollment)&nbsp;</p>
+          <p>Berkeley Global Access&nbsp; &nbsp;</p>
         </div>
       </div>
 </div>
