--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
       <div class="container">
         <ul class="navbar-nav">
           <li class="nav-item active"> 
-            <a1 class="nav-link" href="#">Introduction</a1>
+            <a1 class="nav-link btn btn-sm" href="#">Introduction</a1>
           </li>
           <li class="nav-item"> 
-            <a1 class="nav-link" href="#edu">Education</a1> 
+            <a1 class="nav-link btn btn-sm" href="#edu">Education</a1>
           </li>
           <li class="nav-item"> 
-            <a1 class="nav-link" href="#prj"> Projects</a1>
+            <a1 class="nav-link btn btn-sm" href="#prj"> Projects</a1>
             
           </li>
           <li class="nav-item"> 
-            <a1 class="nav-link" href="#ski">Skills</a1> 
+            <a1 class="nav-link btn btn-sm" href="#ski">Skills</a1>
           </li>
         </ul>
       </div>
