mobile under construction

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire|neon|outline|emboss|shadow-multiple">
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <title>Jiarun Wei | Homepage</title>
+    <script>
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+            // true for mobile device
+            window.location.href = "./mobile.html";
+        }
+    </script>
     <style>
         h1 {
             font-family: Sofia;
