--- a/delivery.html
+++ b/delivery.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Porter Hall | Delivery Instructions</title>
+    </head>
 <body>
     <h1>This page helps you delivering food to Porter Hall</h1>
     <p>The destination is marked with red circle in the following photo</p>
