--- a/delivery.html
+++ b/delivery.html
@@ -7,7 +7,7 @@
     </head>
 <body>
     <h1>This page helps you delivering food to Porter Hall</h1>
-    <p>The destination is marked with red circle in the following photo</p>
+    <p>The destination is marked with red circle in the following photo, the precise location can be found <a href="https://goo.gl/maps/2aZyXnjDXn9JXMb69">here</a></p>
     <img src="map.png" width="400" alt="">
     <p>This is a photo of Porter Hall</p>
     <img src="porter_hall.jpg" width="400" alt="">
