--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,7 @@
 <body>
 <!--     <h1>This page helps you delivering food to Porter Hall</h1> -->
 <!--     <p>The destination is marked with red circle in the following photo, the precise location can be found <a href="https://goo.gl/maps/2aZyXnjDXn9JXMb69">here</a></p> -->
-    <img src="furniture.png" width="400" alt="">
+    <img src="furniture.JPEG" width="400" alt="">
 <!--     <p>This is a photo of Porter Hall</p> -->
 <!--     <img src="porter_hall.jpg" width="400" alt=""> -->
 </body>
