--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 machine learning and robotics. He is currently working at Safe AI Lab as a research assistant for the development of an autonomous delivery robot and in charge of the perception and localization algorithms. </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a href="https://www.linkedin.com/in/jiarun-wei-gemini/"><button type="button" class="btn btn-outline-warning btn-lg px-4 me-sm-3 fw-bold">Connect</button></a>
-                <a href="./JiarunWei_Resume.pdf"><button type="button" class="btn btn-outline-light btn-lg px-4">Resume</button></a>
+                <a href="./Resume_1029.pdf"><button type="button" class="btn btn-outline-light btn-lg px-4">Resume</button></a>
             </div>
         </div>
     </div>
