--- a/mobile.html
+++ b/mobile.html
@@ -72,7 +72,7 @@
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a href="https://www.linkedin.com/in/jiarun-wei-gemini/"><button type="button" class="btn btn-outline-info btn-lg px-4">LinkedIn</button></a>
                 <a><button onclick="copy('jiarunGemini')" type="button" class="btn btn-outline-success btn-lg px-4">Wechat</button></a>
-                <a href="./JiarunWei_Resume.pdf"><button type="button" class="btn btn-outline-warning btn-lg px-4"> Resume </button></a>
+                <a href="./Resume_1029.pdf"><button type="button" class="btn btn-outline-warning btn-lg px-4"> Resume </button></a>
                 <!-- <button onclick="myFunction()">Copy text</button> -->
                 <!-- <div onclick="select_all_and_copy(this)" style="display:none;">jiarunGenini</div> -->
                 <script>
