mobile page description

--- a/delivery.html
+++ b/delivery.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Porter Hall | Delivery Instructions</title>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mylo Santa Clara| Delivery Instructions</title>
+</head>
+
 <body>
-    <h1>This page helps you delivering food to Porter Hall</h1>
-    <p>The destination is marked with red circle in the following photo, the precise location can be found <a href="https://goo.gl/maps/2aZyXnjDXn9JXMb69">here</a></p>
-    <img src="map.png" width="400" alt="">
-    <p>This is a photo of Porter Hall</p>
+    <h1>This page helps you delivering food to my home</h1>
+    <p>The precise location can be found <a href="https://maps.app.goo.gl/aj8mFDocZRCtQbSr7?g_st=ipc">here</a></p>
+    <!-- <img src="map.png" width="400" alt=""> -->
+    <p>This is a photo of the location</p>
     <img src="porter_hall.jpg" width="400" alt="">
 </body>
 
