--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a href="https://www.linkedin.com/in/jiarun-wei-gemini/"><button type="button"
                         class="btn btn-outline-warning btn-lg px-4 me-sm-3 fw-bold">Connect</button></a>
-                <a href="./cv.pdf"><button type="button" class="btn btn-outline-light btn-lg px-4">Resume</button></a>
+                <a href="./Jiarun_Wei.pdf"><button type="button"
+                        class="btn btn-outline-light btn-lg px-4">Resume</button></a>
             </div>
         </div>
     </div>
