--- a/mobile.html
+++ b/mobile.html
@@ -79,7 +79,7 @@
                         class="btn btn-outline-info btn-lg px-4">LinkedIn</button></a>
                 <a><button onclick="copy('jiarunGemini')" type="button"
                         class="btn btn-outline-success btn-lg px-4">Wechat</button></a>
-                <a href="./cv.pdf"><button type="button" class="btn btn-outline-warning btn-lg px-4"> Resume
+                <a href="./Jiarun_Wei.pdf"><button type="button" class="btn btn-outline-warning btn-lg px-4"> Resume
                     </button></a>
                 <!-- <button onclick="myFunction()">Copy text</button> -->
                 <!-- <div onclick="select_all_and_copy(this)" style="display:none;">jiarunGenini</div> -->
